# DecompositionUMAP

./: .gitignore  README.md  ReadMe.rst  convert_fast.py  plot_stock.py  pyproject.toml
examples/: example_1d_lorentz.py  example_2d_pink_gaussian.py  example_2d_pink_noise_gauss_with_scales.py  example_2d_turing_gaussian.py
src/: __init__.py  cli.py  decomposition_umap.py  embedding.py  example.py  interactive.py  multiscale_decomposition.py  test_plot_stock.py  utils.py
tests/: example_comprehensive.py  example_turing_gauss_3d.py  test_dataset.py  test_lorentz.py  test_multidata_multi_var.py  test_pink_noise_gauss.py  test_stock.py  test_turing_gauss.py
