[project]
name = "decomposition-umap"
version = "1.2.6"
description = "A Python module for pattern classification and anomaly detection using UMAP dimensionality reduction embedding on decomposed data using Constrained Diffusion"
readme = "ReadMe.rst"
authors = [
    { name = "Guang-Xing Li", email = "ligx.ngc7293@gmail.com" }
]
license = { text = "GPLv3" }
requires-python = ">=3.0"
dependencies = [
    "numpy>=1.00",
    "umap-learn>=0.4.0",
    "constrained-diffusion>=1.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "Pillow>=9.0.0",
    # "emd-signal>=1.0.0"
]

[project.optional-dependencies]
torchdr = [
    "torch>=2.0.0",
    "torchdr>=0.1.0"
]
mps = [
    "torch>=2.0.0",
    "torchdr>=0.1.0"
]
cuml = [
    "cuml-cu12>=25.0.0; platform_system == 'Linux'"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "decomposition_umap" = "src" }
packages = ["decomposition_umap"]


[project.scripts]
decomposition-umap = "decomposition_umap.__main__:main"
